.labs/Local-Kubernetes/mlops/manifests/mlflow/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlflow
spec:
  ingressClassName: traefik
  rules:
    - host: mlflow.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mlflow
                port:
                  number: 5000
